...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/email_textview"
                app:layout_constraintTop_toBottomOf="@+id/email_textview"
                tools:text="1" />

            <ImageButton
                android:id="@+id/edit_image_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/edit_item"
                android:src="@drawable/edit"
                app:layout_constraintBottom_toTopOf="@+id/delete_image_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/delete_image_button"
                android:layout_width="24dp"
...
